--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -22,12 +22,21 @@
               </div>
               {{- end }}
               <ul>
-                {{- range $i, $r := getCSV "," $.Site.Params.footer_links }}
+              {{- $p := $.Site.Params.footer_links }}
+{{/* remove later START */}}
+              {{- $parts := split $p "/" }}
+              {{- if eq (index $parts 0) "csv" }}
+                  {{- $p = printf "%s/%s/%s" (index $parts 1) (index $parts 0) (index $parts 2)}}
+              {{- end }}
+{{/* remove later END */}}
+              {{- with resources.Get $p }}
+                {{- $data := . | transform.Unmarshal (dict "delimiter" ",") }}
+                {{- range $i, $r := $data }}
                     {{- $href := "" }}
                     {{- $target := "_blank" }}
                     {{- $text := "" }}
                     {{- $disp := true }}
-                    {{- if ne (index $r 3) nil }}
+                    {{- if ge (len $r) 3 }}
                         {{- if eq (index $r 0) "1" }}
                             {{- $target = index $r 3 }}
                             {{- $href = index $r 2 }}
@@ -41,7 +50,7 @@
                         {{- else }}
                             {{- $disp = false }}
                         {{- end }}
-                    {{- else }}
+                    {{- else }} {{/* o and m */}}
                         {{- $href = index $r 1 }}
                         {{- $text = index $r 0 }}
                     {{- end }}
@@ -51,22 +60,25 @@
                 {{- end }}
               </ul>
             </div>
-            {{- if eq $.Site.Params.id_search true }}
+                {{- if eq $.Site.Params.id_search true }}
             <div class="footer-links {{$footerLinks_Ex}}">
               <div class="footer-link-title">{{ i18n "Help_site" }}</div>
               <ul>
-                {{- range $i, $r := getCSV "," $.Site.Params.footer_links }}
+                  {{- range $i, $r := $data }}
                     {{- $href := index $r 2 }}
                     {{- if and (eq (index $r 0) "2") (not (and (eq $.Page.Type "search_id") (eq (strings.Count "search_id" $href) 1))) }}
                         {{- $target := index $r 3 }}
                         {{- $text := index $r 1 }}
                 <li><a href="{{$href}}" target="{{$target}}">{{$text}}</a></li>
                     {{- end }}
-                {{- end }}
+                  {{- end }}
               </ul>
             </div>
-            {{- end }}
+                {{- end }}
         </div>
+              {{- else }}
+                {{- warnf "Unable to get resource %q" $p }}
+              {{- end }}
         <div id="footercopyright">
         {{ i18n "Footer_copyright" }}<br>
         {{- if eq .Site.Params.TargetRegion "US" }}
