--- a/layouts/partials/meganav_kt.html
+++ b/layouts/partials/meganav_kt.html
@@ -17,13 +17,19 @@
 {{- if ne (os.FileExists $menufile) true }}
   {{- $menufile = printf "csv/menuitems_%s_%s.csv" $.Lang $.Site.Params.TargetRegion}}
 {{- end }}
-{{- range $i, $r := getCSV "," $menufile }}
-    {{- $menu_ids = $menu_ids | append (index $r 0) }}
-    {{- $menu_titles = $menu_titles | append (index $r 1) }}
-    {{- $menu_urls = $menu_urls | append (index $r 2) }}
-    {{- if and (not $.IsHome) (ne $.Params.type "search_result") (ne $.Params.type "search_id") (eq $curtab "") (eq (index $r 0) $strtabnum) }}
-        {{- $curtab = (index $r 1) }}
+{{- $p := "common/csv/icon_images.csv" }}
+{{- with resources.Get $p }}
+    {{- $data := . | transform.Unmarshal (dict "delimiter" ",") }}
+    {{- range $i, $r := $data }}
+        {{- $menu_ids = $menu_ids | append (index $r 0) }}
+        {{- $menu_titles = $menu_titles | append (index $r 1) }}
+        {{- $menu_urls = $menu_urls | append (index $r 2) }}
+        {{- if and (not $.IsHome) (ne $.Params.type "search_result") (ne $.Params.type "search_id") (eq $curtab "") (eq (index $r 0) $strtabnum) }}
+            {{- $curtab = (index $r 1) }}
+        {{- end }}
     {{- end }}
+{{- else }}
+    {{- warnf "Unable to get resource %q" $p }}
 {{- end }}
 <nav class="mega-nav-bar" role="navigation" aria-label="{{ i18n "Document_type" }}">
     <ul class="g-nav" role="none" ></ul>
