--- a/layouts/partials/footer_gr6.html
+++ b/layouts/partials/footer_gr6.html
@@ -1,15 +1,27 @@
 {{- $sep := "\t" -}}
 {{- $legal_menu := slice -}}
 {{- $mega_menus := dict -}}
-{{- range $i, $r := getCSV "," $.Site.Params.footer_links -}}
+{{- $p := $.Site.Params.footer_links }}
+{{/* remove later START */}}
+{{- $parts := split $p "/" }}
+{{- if eq (index $parts 0) "csv" }}
+    {{- $p = printf "%s/%s/%s" (index $parts 1) (index $parts 0) (index $parts 2)}}
+{{- end }}
+{{/* remove later END */}}
+{{- with resources.Get $p }}
+  {{- $data := . | transform.Unmarshal (dict "delimiter" ",") }}
+  {{- range $i, $r := $data -}}
     {{- $id := (index $r 0 ) }}{{ $item := printf "%s%s%s" (index $r 1 ) $sep (index $r 2) -}}
     {{- if (eq $id "999" ) -}}
-        <!-- id = 999 is special footer -->
+          <!-- id = 999 is special footer -->
         {{- $legal_menu = $legal_menu | append $item -}}
     {{- else -}}
         {{- $menu_items := index $mega_menus $id }}{{ $menu_items = $menu_items | append $item -}}
         {{- $mega_menus = merge $mega_menus (dict $id $menu_items) -}}
     {{- end -}}
+  {{- end }}
+{{- else }}
+  {{- warnf "Unable to get resource %q" $p }}
 {{- end -}}
 
 <footer id="page-footer" class="footer{{- if .IsHome }} footer-home{{- end }}">
