--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -66,3 +66,9 @@ h4.audit + .id-link-button {
     color: #ffffff;
     background-color: #0d7b91;
 }
+
+.wv-brk::before {
+  content: '「';
+}
+.wv-brk::after {
+  content: "」";
