use double quotations

--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -68,13 +68,13 @@ h4.audit + .id-link-button {
 }
 
 .wv-brk::before {
-  content: '「';
+  content: "「";
 }
 .wv-brk::after {
   content: "」";
 }
 .wv-brk2::before {
-  content: '[';
+  content: "[";
 }
 .wv-brk2::after {
   content: "]";
