Shrink image in admonition

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -2551,8 +2551,7 @@ i.index-pdf {
         display: block;
     }
     /* -------------------------------- article style */
-
-    .article img.screenshot {
+    .article img:not(.admonition img.screenshot) {
         max-width: 600px;
     }
 }
