--- a/layouts/of/subsection_top/section.html
+++ b/layouts/of/subsection_top/section.html
@@ -41,11 +41,17 @@
             <span class="fa-stack">
             {{- $iconface := "" }}
             {{- $targetlink := .RelPermalink }}
-            {{- range $i, $r := getCSV "," "csv/icon_images.csv" }}
-                {{- if in $targetlink (index $r 0)}}
-                    {{- $iconface = (index $r 1) }}
+            {{- $p := "common/csv/icon_images.csv" }}
+            {{- with resources.Get $p }}
+                {{- $data := . | transform.Unmarshal (dict "delimiter" ",") }}
+                {{- range $i, $r := $data }}
+                    {{- if in $targetlink (index $r 0)}}
+                        {{- $iconface = (index $r 1) }}
+                    {{- end }}
                 {{- end }}
-            {{- end}}
+            {{- else }}
+                {{- warnf "Unable to get resource %q" $p }}
+            {{- end }}
               <i class="far fa-circle fa-stack-2x" aria-hidden="true"></i>
               <i class="{{$iconface}} fa-stack-1x" aria-hidden="true"></i>
             </span>
