--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -59,6 +59,7 @@
     </div>
     {{- end }}
 </div>
+{{- partial "treenav_toggle" . }}
 {{- partial "gototop" . }}
 {{- if and $.Site.Params.support_inquiry (eq $.Site.LanguageCode "en-us") }}
     {{- partial "support_inquiry" $.Site.Params.support_inquiry }}
