--- a/layouts/partials/treenav2.html
+++ b/layouts/partials/treenav2.html
@@ -2,7 +2,7 @@
     <div id="tree-head">
         <div class="tree-title"><a href="{{.RelPermalink}}">{{- partial "title" . -}}</a></div>
     </div>
-    <nav id="tree-main" role="tree">
+    <nav id="tree-main" class="tree-main" role="tree">
         <ul>
             <li class="dummy-node" data-jstree='{ "opened" : true, "disabled" : true }'>
                 {{- $tocs := "" }}
