--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -1,24 +1,19 @@
+:root {
+  --theme-color: #4bd7f3;
+  --focus-color: #2563eb;
+  --select-color: #2563eb;
+  --select-bg-color: #ccdcff;
+}
+
 /* Header */
-.logo-wrap {
-  width: 200px;
-  padding-top: 8px;
-}
-.logo-img {
-  width: 100px;
-  vertical-align: -14px;
-}
-.logo-product {
-  display: none;
-}
 .logo-title {
-  padding-left: 0;
-  padding-top: 9px;
   font-size: 14px;
   color: #333;
 }
 .logo-title:lang(en) {
   font-size: 20px;
 }
+
 
 .article table {
     margin-bottom: 40px;
@@ -95,12 +90,6 @@ h4.audit + .id-link-button {
 
 /* 768px以上の設定 *****************************************************/
 @media only screen and (min-width:768px){
-    .logo-img {
-        width: 140px;
-        height: 35px;
-        vertical-align: -10px;
-    }
-
     .logo-title {
         padding-top: 0;
         font-size: 18px;
