--- a/layouts/partials/treenav3.html
+++ b/layouts/partials/treenav3.html
@@ -1,4 +1,7 @@
 <div id="tree-nav" class="tree-base">
-    <nav id="tree-main" role="tree">
+    {{- if eq $.Site.Params.template_version "2" -}}
+    <button id="tree-close-mobile"><i class="fas fa-times"></i></button>
+    {{- end }}
+    <nav id="tree-main" class="tree-main" role="tree">
     </nav>
 </div>
