--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -1,3 +1,10 @@
+:root {
+  --theme-color: #ee3e23;
+  --lead-text-color: #fff;
+  --appendix-bg-color: #ef3f241e;
+  --appendix-icon-bg-color: #ff6f42;
+}
+
 .font-en, .mega-tab {
   font-family: proxima-nova, sans-serif;
   font-weight: 400;
@@ -26,8 +33,8 @@
 .header::before {
   content: none;
 }
-.logo-wrap {
-  padding-top: 10px;
+.logo-wrap h1 {
+  padding-top: 0;
 }
 .logo-img {
   width: 160px;
@@ -52,24 +59,19 @@
   height: 56px;
 }
 .welcome_message {
-  display: block;
-  text-align: center;
-  padding-top: 0;
-  font-weight: normal;
-  font-size: 2rem;
-  margin-bottom: 10px;
+  color: var(--lead-text-color);
 }
 .hero {
   display: block;
   background-size: 300px;
   background-position: 100% -30%;
   height: 150px;
-  background-color: #ee3e23;
+  background-color: var(--theme-color);
   margin-left: auto;
   margin-right: auto;
 }
 .eye-catching {
-  background-color: #ee3e23;
+  background-color: var(--theme-color);
 }
 
 .mega-nav-bar {
@@ -167,6 +169,9 @@
   font-size: .8em;
   margin-top: 3px;
 }
+.mega-panel a {
+  color: #fff;
+}
 .mega-panelplace {
   background: #a42e25;
 }
@@ -247,11 +252,15 @@ h4.audit {
   border-radius: 10px;
 }
 .col-tile i {
-  color: #EE3E23 !important;
+  color: var(--theme-color) !important;
 }
 
 .fixed-tree {
     top: 98px;
+}
+
+.inquiry-panel .fas {
+    color: #fff;
 }
 
 /* 古いiPhone向けの設定 ************************************************/
@@ -278,7 +287,7 @@ h4.audit {
         position: fixed;
         top: 56px;
         box-shadow: 1px 1px 2px #726464;
-        z-index: 2000;
+        z-index: 12000;
     }
     .mega-tab, .mega-tab[aria-expanded="true"]:hover {
        border-bottom: 1px solid transparent;
@@ -322,6 +331,10 @@ h4.audit {
     /* Tiles of the top page */
     .col-flex {
       margin-top: 100px;
+    }
+
+    .appendix-category-icon {
+        color: {}
     }
 }
 
